# si-ecopass-be

./: .dockerignore  .env.example  .gitignore  .mcp.json  ADMIN_SETUP_GUIDE.md  API_PRD.md  BACKEND_SPEC.md  CLAUDE.md  DEPLOYMENT.md  Dockerfile  QUICKSTART.md  README.md  SUPABASE_STORAGE_SETUP.md  WORK_DISTRIBUTION_GUIDE.md  docker-compose.yml  main.py  parkinglots.xlsx  pyproject.toml  pytest.ini  render.yaml  stations.xlsx  supabase_rpc_functions.sql  verify_implementation.py
.github/: RENDER_SETUP.md
.github/workflows/: deploy-render.yml
docs/: admin-page-prd.md
frontend-docs/: 00-quick-start.md  README.md  api-flows.md  swagger-guide.md
frontend-docs/prompts/: MASTER.md
postman/: SI-EcoPass-Backend.postman_collection.json
scripts/: README.md  cleanup_local_db.py  cleanup_test_data.sql  convert_to_public_urls.py  create_admin_user.py  import_station_data.py  migrate_image_urls_to_signed.py  refresh_expired_signed_urls.py  test_signed_url.py  update_admin_metadata.py
scripts/output/: 01_insert_stations.sql  02_insert_parking_lots.sql  data_backup.json
src/: config.py  main.py
src/shared/: exceptions.py
supabase/: README.md  config.toml  seed.sql
supabase/migrations/: 20251226000001_initial_schema.sql  20251226000002_add_user_role.sql  20251227000001_add_daegyeong_line.sql  20251229000001_add_admin_rls_policy.sql  20251229000002_add_lat_lng_columns_with_trigger.sql  20251229000003_add_admin_rls_policies.sql  (+11 more)
tests/: __init__.py  conftest.py  test_admin.py  test_auth.py  test_integration.py  test_stations.py  test_storage.py  test_trips.py
(+54 files in other folders)
